[project]
name = "mcp-gateway"
version = "0.1.0"
description = "Gateway server for MCP servers"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.1.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=1.8.2"
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_gateway"]
package-dir = {"" = "src"}
